--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wangeditor/plugin-formula",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "wangEditor formula 公式",
   "repository": {
     "type": "git",
@@ -58,8 +58,8 @@
     "@types/katex": "^0.11.1",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
-    "@wangeditor/core": "^0.14.6",
-    "@wangeditor/editor": "^0.15.5",
+    "@wangeditor/core": "^0.14.7",
+    "@wangeditor/editor": "^0.15.6",
     "autoprefixer": "^10.2.5",
     "babel-jest": "^27.3.1",
     "babel-loader": "^8.2.2",
@@ -98,8 +98,8 @@
     "webpack-merge": "^5.7.3"
   },
   "peerDependencies": {
-    "@wangeditor/core": "^0.14.6",
-    "@wangeditor/editor": "^0.15.5",
+    "@wangeditor/core": ">=0.14.7",
+    "@wangeditor/editor": ">=0.15.6",
     "katex": "^0.15.2",
     "snabbdom": "^3.3.1"
   },
